add module.info